# shoulds

./: Cargo.toml  README.md
src/: core_bool.rs  core_eq.rs  core_ne.rs  core_option.rs  core_result.rs  lib.rs  should.rs
