[package]
authors = ["Andrew <andrew@tarrball.com>"]
categories = ["development-tools", "development-tools::testing"]
description = "An intuitive and simple library for writing test assertions in a natural and fluent language."
edition = '2021'
keywords = ["test", "assertion", "shouldly"]
license = "MIT"
name = "shoulds"
readme = "README.md"
repository = "https://github.com/tarrball/shoulds/"
version = "0.1.5"