[package]
name = "shoulds"
version = "0.3.0"
edition = "2021"
authors = ["Andrew Tarr <andrew@tarrball.com>"]

description = "An intuitive, fluent assertion library for writing expressive test expectations in Rust."
readme = "README.md"
repository = "https://github.com/tarrball/shoulds"
license = "MIT"

keywords = ["test", "assert", "shouldly", "fluent", "assertion"]
categories = ["development-tools", "development-tools::testing"]